syntax = "proto3";

package car;

option go_package = "github.com/Akan15/carrental3/car-service/proto;car";

message Car {
  string id = 1;
  string brand = 2;
  string model = 3;
  string city = 4;
  string status = 5;
  double latitude = 6;
  double longitude = 7;
}

message CarIdRequest {
  string id = 1;
}

message Empty {}

message CarList {
  repeated Car cars = 1;
}

message CreateCarRequest {
  string brand = 1;
  string model = 2;
  string city = 3;
  string status = 4;
  double latitude = 5;
  double longitude = 6;
}

message UpdateCarRequest {
  string id = 1;
  string brand = 2;
  string model = 3;
  string city = 4;
  string status = 5;
  double latitude = 6;
  double longitude = 7;
}

service CarService {
  rpc CreateCar(CreateCarRequest) returns (Car);
  rpc GetCar(CarIdRequest) returns (Car);
  rpc UpdateCar(UpdateCarRequest) returns (Car);
  rpc DeleteCar(CarIdRequest) returns (Empty);
  rpc ListCars(Empty) returns (CarList);
}
